--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0px;
 }
 h1{
     font-size: 50px;
@@ -16,4 +17,44 @@ h1{
 }
 .headclass img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 300px;
+}
+.link-botton{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.mission-vission2{
+    box-shadow: 10px 20px 40px gray;
+    border-radius: 15px;
+    height: 80%;    
+}
+.mission-vission1{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;    
+}
+#missionid{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(255, 0, 242), tomato);
+    border-image-slice: 1;
+}
+#vissionid{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(10, 233, 58), rgb(238, 255, 3));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
 }
